# multipole

./: README.md  flake.nix  pyproject.toml  results.txt
app/: hw.py
